# momonga_search_mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evidence-context-compression.md  runtime.md  tool_responses.md
src/momonga_search_mcp/: api.py  cache.py  cli.py  config.py  logging.py  prompts.py  resources.py  server.py  skills.py
src/momonga_search_mcp/skill_resources/: index.json
src/momonga_search_mcp/skill_resources/skills/: document-content-retrieval.md  document-research.md  evidence-answering.md  evidence-compression.md  file-download.md  news-research.md
src/momonga_search_mcp/tools/: definitions.py  handlers.py  response.py
tests/: test_api.py  test_cache.py  test_cli.py  test_config.py  test_resources.py  test_server.py
tests/tools/: fakes.py  test_definitions.py  test_handlers.py  test_response.py
