[project]
name = "momonga-search-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
]

[project.scripts]
momonga-search-mcp = "momonga_search_mcp.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 130
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "C4", "DTZ", "RUF"]
ignore = ["RUF001", "E501", "B905", "N803", "N806"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["momonga_search_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
