[project]
name = "momonga-search-mcp"
version = "0.1.0"
description = "MCP stdio server for Momonga Search API document and news research workflows"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "platformdirs>=4.5.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
momonga-search-mcp = "momonga_search_mcp.server:main"
momonga-search-mcp-cache = "momonga_search_mcp.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
momonga_search_mcp = ["skill_resources/index.json", "skill_resources/skills/*.md"]

[tool.ruff]
line-length = 130
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "C4", "DTZ", "RUF"]
ignore = ["RUF001", "E501", "B905", "N803", "N806"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["momonga_search_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
